--- a/mongo.yml
+++ b/mongo.yml
@@ -1,5 +1,9 @@
 version: '3'
 services:
+  my-app: 
+    image: kishoremkv/my-basic-app:1.0
+    ports:
+      - 3001:3000
   mongodb:
     image: mongo
     ports:
@@ -7,7 +11,8 @@ services:
     environment:
       - MONGO_INITDB_ROOT_USERNAME=admin
       - MONGO_INITDB_ROOT_PASSWORD=password
-    
+    volumes:
+      - mongo-data:/data/db
   mongo-express:
     image: mongo-express
     ports: 
@@ -16,3 +21,6 @@ services:
       - ME_CONFIG_MONGODB_ADMINUSERNAME=admin
       - ME_CONFIG_MONGODB_ADMINPASSWORD=password
       - ME_CONFIG_MONGODB_SERVER=mongodb
+volumes:
+  mongo-data:
+    driver: local
